--- a/iSplitter/en.lproj/MainStoryboard.storyboard
+++ b/iSplitter/en.lproj/MainStoryboard.storyboard
@@ -12,6 +12,30 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="BGX-qd-hxb">
+                            <rect key="frame" x="0.0" y="498" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoDark" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ICb-Ss-ZEa">
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                    <state key="normal">
+                                        <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                    <state key="highlighted">
+                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                    <connections>
+                                        <segue destination="nrj-yh-rRf" kind="modal" identifier="HelpViewSegue" id="frg-ip-Vt3"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="ICb-Ss-ZEa" firstAttribute="centerY" secondItem="BGX-qd-hxb" secondAttribute="centerY" type="default" id="QnK-B8-pel"/>
+                                <constraint firstAttribute="trailing" secondItem="ICb-Ss-ZEa" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="mMF-eo-fnK"/>
+                            </constraints>
+                        </view>
                         <sections>
                             <tableViewSection headerTitle="iSplitter" id="tjt-q1-Isc">
                                 <cells>
@@ -220,21 +244,21 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" restorationIdentifier="DiffCell" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="2" indentationWidth="10" textLabel="aso-Rf-RvU" detailTextLabel="dnJ-yX-B0m" style="IBUITableViewCellStyleValue1" id="1oK-lb-F76">
+                                    <tableViewCell contentMode="scaleToFill" restorationIdentifier="HelpCell" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="2" indentationWidth="10" textLabel="2fw-zY-kf9" detailTextLabel="4MC-cA-ry2" style="IBUITableViewCellStyleValue1" id="nec-Gr-cXg">
                                         <rect key="frame" x="0.0" y="454" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" tag="1" contentMode="left" text="Difference" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="aso-Rf-RvU">
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" tag="1" contentMode="left" text="Difference" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2fw-zY-kf9">
                                                     <rect key="frame" x="30" y="11" width="84" height="21"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 </label>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dnJ-yX-B0m">
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4MC-cA-ry2">
                                                     <rect key="frame" x="266" y="11" width="44" height="21"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -255,30 +279,35 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KGj-eu-znQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-10" y="-37"/>
+            <point key="canvasLocation" x="-106" y="-37"/>
+        </scene>
+        <!--User Guide View Controller-->
+        <scene sceneID="r0w-kf-w7h">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lPf-cl-QW8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="Help" id="nrj-yh-rRf" customClass="WUUserGuideViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mQ7-9Q-CqL">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="edI-wb-2Ww"/>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="edI-wb-2Ww" firstAttribute="bottom" secondItem="mQ7-9Q-CqL" secondAttribute="bottom" type="default" id="HWR-YJ-PuM"/>
+                            <constraint firstItem="edI-wb-2Ww" firstAttribute="trailing" secondItem="mQ7-9Q-CqL" secondAttribute="trailing" type="default" id="Wsd-gi-zol"/>
+                            <constraint firstItem="edI-wb-2Ww" firstAttribute="top" secondItem="mQ7-9Q-CqL" secondAttribute="top" type="default" id="h9o-6J-0ix"/>
+                            <constraint firstItem="edI-wb-2Ww" firstAttribute="leading" secondItem="mQ7-9Q-CqL" secondAttribute="leading" type="default" id="uRv-sL-MM6"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="scrollView" destination="edI-wb-2Ww" id="cW6-bA-559"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="377" y="-37"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="WUMainViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/WUMainViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="taxSwitchChanged:" candidateClass="UISwitch"/>
-                <relationship kind="outlet" name="taxSwitch" candidateClass="UISwitch"/>
-            </relationships>
-        </class>
-        <class className="WUPickerTableViewCell" superclassName="WUTableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/WUPickerTableViewCell.h"/>
-        </class>
-        <class className="WUTableViewCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/WUTableViewCell.h"/>
-        </class>
-        <class className="WUTaxPickerTableViewCell" superclassName="WUPickerTableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/WUTaxPickerTableViewCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="delegate"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
